--- a/index.html
+++ b/index.html
@@ -17,10 +17,14 @@
   <body>
     <header class="header">
       <div class="overlay has_fade"></div>
-      <nav class="container flex flex-jc-se flex-ai-c flex-jc-e">
+      <nav class="container flex flex-jc-sb flex-ai-c">
         <!-- <a href="/" class="header__logo">
         <img src="/assets/images/log-for-fav.png" alt="Qubix"/>
       </a> -->
+
+        <a href="#" class="header__logo"
+          ><img src="assets/images/QT-logo-200x200.webp" alt="Qubix"
+        /></a>
 
         <a id="btnHamburger" href="#" class="header__toggle hide-for-desktop">
           <span></span>
